[package]
name = "leetcode_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
reqwest = { version = "0.11.10", features = ["blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
